:art: Rename IndyNonRevocationInterval model (#1540)
* :art: Rename IndyNonRevocationInterval model

* :memo: Update OpenAPI specs

* :art: Create model to override "indy" in field description

:tada: No more references to "indy" in the OpenAPI specs!

* :truck: Move model conversion

* :art: Make fields optional (as in cloudcontroller model)

* :test_tube: Update tests

* :memo: Sync OpenAPI Specs
