# docs/openapi/tenant-openapi.yaml
@@ -3246,16 +3246,22 @@ components:
     CredInfo:
       properties:
         attrs:
-          additionalProperties: true
-          type: object
+          anyOf:
+            - additionalProperties: true
+              type: object
+            - type: 'null'
           title: Attrs
           description: Attribute names and value
         cred_def_id:
-          type: string
+          anyOf:
+            - type: string
+            - type: 'null'
           title: Cred Def Id
           description: Credential definition identifier
         credential_id:
-          type: string
+          anyOf:
+            - type: string
+            - type: 'null'
           title: Credential Id
           description: Credential identifier
         cred_rev_id:
@@ -3277,10 +3283,6 @@ components:
           title: Schema Id
           description: Schema identifier
       type: object
-      required:
-        - attrs
-        - cred_def_id
-        - credential_id
       title: CredInfo
     CredInfoList:
       properties:
@@ -3300,7 +3302,7 @@ components:
           description: Credential info
         interval:
           anyOf:
-            - $ref: '#/components/schemas/IndyNonRevocationInterval'
+            - $ref: '#/components/schemas/NonRevocationInterval'
             - type: 'null'
           description: Non-revocation interval from presentation request
         presentation_referents:
@@ -4016,27 +4018,6 @@ components:
       type: object
       title: Hangup
       description: Hangup
-    IndyNonRevocationInterval:
-      properties:
-        from:
-          anyOf:
-            - type: integer
-              maximum: 1.8446744073709552e+19
-              minimum: 0.0
-            - type: 'null'
-          title: From
-          description: Earliest time of interest in non-revocation interval
-        to:
-          anyOf:
-            - type: integer
-              maximum: 1.8446744073709552e+19
-              minimum: 0.0
-            - type: 'null'
-          title: To
-          description: Latest time of interest in non-revocation interval
-      type: object
-      title: IndyNonRevocationInterval
-      description: IndyNonRevocationInterval
     InputDescriptors:
       properties:
         constraints:
@@ -4651,6 +4632,26 @@ components:
           title: X List
       type: object
       title: NonRevocProof
+    NonRevocationInterval:
+      properties:
+        from:
+          anyOf:
+            - type: integer
+              maximum: 1.8446744073709552e+19
+              minimum: 0.0
+            - type: 'null'
+          title: From
+          description: Earliest time of interest in non-revocation interval
+        to:
+          anyOf:
+            - type: integer
+              maximum: 1.8446744073709552e+19
+              minimum: 0.0
+            - type: 'null'
+          title: To
+          description: Latest time of interest in non-revocation interval
+      type: object
+      title: NonRevocationInterval
     OobRecord:
       properties:
         attach_thread_id:
@@ -5315,10 +5316,9 @@ components:
               type: object
             - type: 'null'
           title: Rev Reg Delta
-          description: Indy revocation registry delta
+          description: Revocation registry delta
       type: object
       title: RevRegWalletUpdatedResult
-      description: RevRegWalletUpdatedResult
     RevokeCredential:
       properties:
         credential_exchange_id:
